<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BarcodeScannerActivity">

    <TextView
        android:id="@+id/TV_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scanner_choose_list"
        android:layout_margin="8dp"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="4dp"
        android:layout_marginEnd="4dp"
        android:scrollbarSize="8dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TV_list" />

    <SurfaceView
        android:id="@+id/SV_camera_view"
        android:layout_width="300dp"
        android:layout_height="400dp"
        android:layout_margin="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <TextView
        android:id="@+id/TV_result_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxHeight="120dp"
        android:text="@string/scanner_result"
        android:layout_margin="10dp"
        android:autoLink="all"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SV_camera_view" />

    <TextView
        android:id="@+id/TV_code_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_marginTop="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TV_result_title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_addItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_to_list"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="8dp"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="@color/colorAccent"/>




</androidx.constraintlayout.widget.ConstraintLayout>